Pequeños ajustes de CSS y clases

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi clon de Google</title>
     <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <title>Mi clon de Google</title>
 </head>
 
 <body>
@@ -44,10 +47,10 @@
         </section>
         <section class="search-buttons">
             <div>
-                <button type="submit">Buscar con Google</button>
+                <button id="search">Buscar con Google</button>
             </div>
             <div>
-                <button>Me siento con suerte</button>
+                <button id="lucky">Me siento con suerte</button>
             </div>
         </section>
     </main>
